<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="login"
                type="com.example.loginespresso.UserModel" />
    </data>
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bgimg"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/header_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Login Screen"
            android:textSize="35dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_icon"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_layout_padding"
                android:paddingTop="@dimen/login_layout_padding_top"
                android:paddingRight="@dimen/login_layout_padding"
                android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                <com.libizo.CustomEditText
                        android:id="@+id/edtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="Username"
                        android:text="@{login.userName}"
                        android:layout_gravity="center_horizontal"
                        app:libIZO_hideShowPasswordIconTint="#085808"
                        app:libIZO_setBorderColor="#0a780a"
                        app:libIZO_setBorderView="true"
                        app:libIZO_setCornerRadius="4dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp">

                <com.libizo.CustomEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:hint="Password"
                        android:text="@{login.password}"
                        android:inputType="textPassword"
                        app:libIZO_hideShowPasswordIconTint="#085808"
                        app:libIZO_setBorderColor="#0a780a"
                        app:libIZO_setBorderView="true"
                        app:libIZO_setCornerRadius="4dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/dark_gray_status"
                    android:lineSpacingExtra="10sp"
                    android:text="Log In"
                    android:textAllCaps="false"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
</layout>